--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,32 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
+@font-face {
+    font-family: "Geist";
+    src        : url('./assets/fonts/GeistVariableVF.ttf') format('truetype');
+}
+
+* {
+    font-family: "Inter", sans-serif;
+}
+
+body {
+    margin          : 0;
+    padding         : 0;
+    background-color: #f5f5f5;
+}
+
+p,
+span,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0;
+}
+
+.geist-font {
+    font-family: "Geist", Arial, sans-serif;
+}
